--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Document</title>
 </head>
 <body>
     <header>
-
+        <h1>Flexbox demo: Menu</h1>
     </header>
     <main class="main-area">
         <div class="centered">
             <section class="menu-section">
                 <h2 class="menu-heading">Single Level Menu</h2>
-                <nav id="single-nav" class="single-nav menu">
+                <nav id="single-nav" class="single-nav menu" role="navigation">
                     <ul>
                         <li>
                             <a href="#">Home</a>
