separate the css files to make them more modular, add the html and styles for an advanced menu

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <h1>Flexbox demo: Menu</h1>
@@ -41,7 +43,55 @@
                     </ul>
                 </nav>
             </section>
+            <section class="menu-section">
+                <h2 class="menu-heading">Advanced Level Menu</h2>
+                <nav id="advanced-nav" class="advanced-nav menu" role="navigation">
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <div class="icon"></div>
+                                <div class="button-text">Home
+                                    <span>is where the heart is</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <div class="icon"></div>
+                                <div class="button-text">Food
+                                    <span>is delicious</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <div class="icon"></div>
+                                <div class="button-text">Classes
+                                    <span>This is the class text</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <div class="icon"></div>
+                                <div class="button-text">Recipes
+                                    <span>This is the recipies text</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <div class="icon"></div>
+                                <div class="button-text">News
+                                    <span>This is the new text</span>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </section>
         </div>
     </main>
 </body>
+
 </html>
