Add the fix for the multi-level and add the final design for future reference

--- a/index.html
+++ b/index.html
@@ -105,11 +105,15 @@
                             <a href="#">Classes
                             </a>
                             <ul class="multilevel hidden">
-                                <li>Sub Item 1</li>
-                                <li>Sub Item 2</li>
-                                <li>Sub Item 3</li>
-                                <li>Sub Item 4</li>
-                                <li>Sub Item 5</li>
+                                <li>
+                                    <a href="#">Chef for Hire</a>
+                                </li>
+                                <li>
+                                    <a href="#">Catering</a>
+                                </li>
+                                <li>
+                                    <a href="#">Restaurant</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
