practicing callbacks vs promises vs observables, part 1 - callbacks

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <h1>Flexbox demo: Menu</h1>
     </header>
     <main class="main-area">
+        <div class="centered" id="async-callback">
+            <div class="texto">Aquí va la Acción</div>
+            <button id="action">Click Me!</button>
+        </div>
         <div class="centered">
             <section class="menu-section">
                 <h2 class="menu-heading">Single Level Menu</h2>
