--- a/index.html
+++ b/index.html
@@ -15,8 +15,16 @@
         <h1>Flexbox demo: Menu</h1>
     </header>
     <main class="main-area">
-        <div class="centered" id="async-callback">
-            <div class="texto">Aquí va la Acción</div>
+        <div class="centered " id="async-callback">
+            <div class="texto">Aquí va la Acción usando Callbacks</div>
+            <button id="action">Click Me!</button>
+        </div>
+        <div class="centered " id="async-promises">
+            <div class="texto">Aquí va la Acción usando Promises</div>
+            <button id="action">Click Me!</button>
+        </div>
+        <div class="centered " id="async-observables">
+            <div class="texto">Aquí va la Acción usando Obsrvables</div>
             <button id="action">Click Me!</button>
         </div>
         <div class="centered">
