--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles.css">
-    <script src="./js/multilevel.js" defer type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/5.5.8/Rx.min.js" defer type="text/javascript"></script>
     <title>Document</title>
 </head>
 
@@ -140,5 +140,6 @@
         </div>
     </main>
 </body>
+<script src="./js/multilevel.js" defer type="text/javascript"></script>
 
 </html>
